--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "bin": "./bin/npm-tweets.js",
   "version": "3.0.0",
   "author": "Ben Coe <bencoe@gmail.com>",
-  "engines": [
+  "engines": {
     "node": "0.10.17"
-  ],
+  },
   "description": "Publishes tweets when libraries are updated on npm.",
   "keywords": [
     "npm",
