--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   },
   "dependencies": {
     "async": ">=0.2.9",
+    "dotenv": "^1.1.0",
     "mocha": ">=1.7.4",
     "optimist": ">0.0.0",
-    "redis": ">=0.8.2",
-    "redis-url": "0.1.0",
+    "redis": "^0.12.1",
+    "redis-url": "^1.2.0",
     "request": "^2.55.0",
     "sinon": ">=1.6.0",
     "twitter-api": ">=1.0.2",
